# spectatui

./: .gitignore  .lintstagedrc.json  .nxignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json  statusline.sh
.claude/skills/speckit-analyze/: SKILL.md
.claude/skills/speckit-checklist/: SKILL.md
.claude/skills/speckit-clarify/: SKILL.md
.claude/skills/speckit-constitution/: SKILL.md
.claude/skills/speckit-converge/: SKILL.md
.claude/skills/speckit-implement/: SKILL.md
.claude/skills/speckit-plan/: SKILL.md
.claude/skills/speckit-refine-diff/: SKILL.md
.claude/skills/speckit-refine-propagate/: SKILL.md
.claude/skills/speckit-refine-status/: SKILL.md
.claude/skills/speckit-refine-update/: SKILL.md
.claude/skills/speckit-specify/: SKILL.md
.claude/skills/speckit-tasks/: SKILL.md
.claude/skills/speckit-taskstoissues/: SKILL.md
.claude/skills/sync-with-speckit/: SKILL.md
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  release.yml
.husky/: commit-msg  pre-commit
.specify/: extension-catalogs.yml  extensions.yml  feature.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
assets/icons/: icon.icns
crates/spectatui/: Cargo.toml  README.md  build.rs  project.json
crates/spectatui-core/: Cargo.toml  README.md  project.json
crates/spectatui-core/src/: layout.rs  lib.rs
crates/spectatui-core/src/speckit/: cli.rs  mod.rs  registry.rs  watch.rs  workflow.rs
crates/spectatui-core/src/tmux/: mod.rs
crates/spectatui/src/: app.rs  config.rs  event.rs  main.rs  theme.rs
crates/spectatui/src/ui/: agent_output.rs  catalogs.rs  extensions.rs  extensions_presets.rs  feature_list.rs  header.rs  integrations.rs  layout_editor.rs  mod.rs  palette.rs  popup.rs  presets.rs  session_attach.rs  settings.rs  spec_browser.rs  statusbar.rs  workflow.rs  workflows.rs
crates/spectatui/wix/: License.rtf  main.wxs
design/: README.md  Spectatui - TUI for Spec-Kit.html  Spectatui.dc.html  spectatui-archi-design.md  spectatui-archi-design2.md
design/core/: spectatui-archi-design.md
design/memory/: speckit-cli-surface.md  sync-log.md  tui-feature-analysis.md
design/ui/: Logo.dc.html  OwlMark.dc.html  Spectatui.dc.html
patches/: @monodon__rust@3.0.0.patch
scripts/: build-artifacts.sh
specs/001-create-taskify/: plan.md  spec.md  tasks.md
specs/001-spectatui-dashboard-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-spectatui-dashboard-mvp/checklists/: requirements.md
specs/001-spectatui-dashboard-mvp/contracts/: app-cli-args.md  config-schema.md  specify-cli-actions.md
specs/002-add-notifications/: spec.md
specs/002-catalog-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tools/: check-release.sh
tools/scripts/: build-artifacts.sh  check-release.sh  init-specify.sh  init_specify.sh
(+4 files in other folders)
